resolved deprecated code